@@ -30,7 +30,8 @@ import javax.jms.JMSException;
 public abstract class ComparisonExpression extends BinaryExpression implements BooleanExpression {
 
     public static BooleanExpression createBetween(Expression value, Expression left, Expression right) {
-        return LogicExpression.createAND(createGreaterThanEqual(value, left), createLessThanEqual(value, right));
+        return LogicExpression.createAND(createGreaterThanEqual(value, left), createLessThanEqual(value,
+                                                                                                  right));
     }
 
     public static BooleanExpression createNotBetween(Expression value, Expression left, Expression right) {
@@ -86,18 +87,14 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     char t = like.charAt(i);
                     regexp.append("\\x");
                     regexp.append(Integer.toHexString(0xFFFF & t));
-                }
-                else if (c == '%') {
-                    regexp.append(".*?"); // Do a non-greedy match 
-                }
-                else if (c == '_') {
-                    regexp.append("."); // match one 
-                }
-                else if (REGEXP_CONTROL_CHARS.contains(new Character(c))) {
+                } else if (c == '%') {
+                    regexp.append(".*?"); // Do a non-greedy match
+                } else if (c == '_') {
+                    regexp.append("."); // match one
+                } else if (REGEXP_CONTROL_CHARS.contains(new Character(c))) {
                     regexp.append("\\x");
                     regexp.append(Integer.toHexString(0xFFFF & c));
-                }
-                else {
+                } else {
                     regexp.append(c);
                 }
             }
@@ -125,22 +122,25 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
             }
 
             if (!(rv instanceof String)) {
-            	return Boolean.FALSE;
-                //throw new RuntimeException("LIKE can only operate on String identifiers.  LIKE attemped on: '" + rv.getClass());
+                return Boolean.FALSE;
+                // throw new RuntimeException("LIKE can only operate on String
+                // identifiers. LIKE attemped on: '" + rv.getClass());
             }
 
-            return likePattern.matcher((String) rv).matches() ? Boolean.TRUE : Boolean.FALSE;
+            return likePattern.matcher((String)rv).matches() ? Boolean.TRUE : Boolean.FALSE;
         }
-        
+
         public boolean matches(MessageEvaluationContext message) throws JMSException {
             Object object = evaluate(message);
-            return object!=null && object==Boolean.TRUE;            
+            return object != null && object == Boolean.TRUE;
         }
     }
 
     public static BooleanExpression createLike(Expression left, String right, String escape) {
         if (escape != null && escape.length() != 1) {
-            throw new RuntimeException("The ESCAPE string litteral is invalid.  It can only be one character.  Litteral used: " + escape);
+            throw new RuntimeException(
+                                       "The ESCAPE string litteral is invalid.  It can only be one character.  Litteral used: "
+                                           + escape);
         }
         int c = -1;
         if (escape != null) {
@@ -152,21 +152,21 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
 
     public static BooleanExpression createNotLike(Expression left, String right, String escape) {
         return UnaryExpression.createNOT(createLike(left, right, escape));
-    }    
+    }
 
     public static BooleanExpression createInFilter(Expression left, List elements) {
-    	
-    	if( !(left instanceof PropertyExpression) )
-    		throw new RuntimeException("Expected a property for In expression, got: "+left);    	
-    	return UnaryExpression.createInExpression((PropertyExpression)left, elements, false);
-    	
+
+        if (!(left instanceof PropertyExpression))
+            throw new RuntimeException("Expected a property for In expression, got: " + left);
+        return UnaryExpression.createInExpression((PropertyExpression)left, elements, false);
+
     }
 
     public static BooleanExpression createNotInFilter(Expression left, List elements) {
-    	
-    	if( !(left instanceof PropertyExpression) )
-    		throw new RuntimeException("Expected a property for In expression, got: "+left);    	
-    	return UnaryExpression.createInExpression((PropertyExpression)left, elements, true);
+
+        if (!(left instanceof PropertyExpression))
+            throw new RuntimeException("Expected a property for In expression, got: " + left);
+        return UnaryExpression.createInExpression((PropertyExpression)left, elements, true);
 
     }
 
@@ -183,27 +183,27 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
     }
 
     public static BooleanExpression createEqual(Expression left, Expression right) {
-    	checkEqualOperand(left);
-    	checkEqualOperand(right);
-    	checkEqualOperandCompatability(left, right);
-    	return doCreateEqual(left, right);
+        checkEqualOperand(left);
+        checkEqualOperand(right);
+        checkEqualOperandCompatability(left, right);
+        return doCreateEqual(left, right);
     }
-    
-	private static BooleanExpression doCreateEqual(Expression left, Expression right) {
+
+    private static BooleanExpression doCreateEqual(Expression left, Expression right) {
         return new ComparisonExpression(left, right) {
 
             public Object evaluate(MessageEvaluationContext message) throws JMSException {
                 Object lv = left.evaluate(message);
                 Object rv = right.evaluate(message);
-                
+
                 // Iff one of the values is null
                 if (lv == null ^ rv == null) {
                     return Boolean.FALSE;
                 }
                 if (lv == rv || lv.equals(rv)) {
                     return Boolean.TRUE;
-                }                
-                if( lv instanceof Comparable && rv instanceof Comparable ) {
+                }
+                if (lv instanceof Comparable && rv instanceof Comparable) {
                     return compare((Comparable)lv, (Comparable)rv);
                 }
                 return Boolean.FALSE;
@@ -220,8 +220,8 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
     }
 
     public static BooleanExpression createGreaterThan(final Expression left, final Expression right) {
-    	checkLessThanOperand(left);
-    	checkLessThanOperand(right);
+        checkLessThanOperand(left);
+        checkLessThanOperand(right);
         return new ComparisonExpression(left, right) {
             protected boolean asBoolean(int answer) {
                 return answer > 0;
@@ -234,8 +234,8 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
     }
 
     public static BooleanExpression createGreaterThanEqual(final Expression left, final Expression right) {
-    	checkLessThanOperand(left);
-    	checkLessThanOperand(right);
+        checkLessThanOperand(left);
+        checkLessThanOperand(right);
         return new ComparisonExpression(left, right) {
             protected boolean asBoolean(int answer) {
                 return answer >= 0;
@@ -248,8 +248,8 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
     }
 
     public static BooleanExpression createLessThan(final Expression left, final Expression right) {
-    	checkLessThanOperand(left);
-    	checkLessThanOperand(right);
+        checkLessThanOperand(left);
+        checkLessThanOperand(right);
         return new ComparisonExpression(left, right) {
 
             protected boolean asBoolean(int answer) {
@@ -263,9 +263,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
         };
     }
 
-	public static BooleanExpression createLessThanEqual(final Expression left, final Expression right) {
-    	checkLessThanOperand(left);
-    	checkLessThanOperand(right);
+    public static BooleanExpression createLessThanEqual(final Expression left, final Expression right) {
+        checkLessThanOperand(left);
+        checkLessThanOperand(right);
         return new ComparisonExpression(left, right) {
 
             protected boolean asBoolean(int answer) {
@@ -278,53 +278,51 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
         };
     }
 
-	/**
-     * Only Numeric expressions can be used in >, >=, < or <= expressions.s 
+    /**
+     * Only Numeric expressions can be used in >, >=, < or <= expressions.s
      * 
-	 * @param expr
-	 */
-	public static void checkLessThanOperand(Expression expr ) {
-		if( expr instanceof ConstantExpression ) {
-			Object value = ((ConstantExpression)expr).getValue();
-			if( value instanceof Number )
-				return;
-			
-			// Else it's boolean or a String..  
-			throw new RuntimeException("Value '"+expr+"' cannot be compared.");
-		}
-		if( expr instanceof BooleanExpression ) {
-			throw new RuntimeException("Value '"+expr+"' cannot be compared.");
-		}		
-	}
+     * @param expr
+     */
+    public static void checkLessThanOperand(Expression expr) {
+        if (expr instanceof ConstantExpression) {
+            Object value = ((ConstantExpression)expr).getValue();
+            if (value instanceof Number)
+                return;
 
-	/**
-     * Validates that the expression can be used in == or <> expression.  
-     * Cannot not be NULL TRUE or FALSE litterals.
+            // Else it's boolean or a String..
+            throw new RuntimeException("Value '" + expr + "' cannot be compared.");
+        }
+        if (expr instanceof BooleanExpression) {
+            throw new RuntimeException("Value '" + expr + "' cannot be compared.");
+        }
+    }
+
+    /**
+     * Validates that the expression can be used in == or <> expression. Cannot
+     * not be NULL TRUE or FALSE litterals.
      * 
-	 * @param expr
-	 */
-	public static void checkEqualOperand(Expression expr ) {
-		if( expr instanceof ConstantExpression ) {
-			Object value = ((ConstantExpression)expr).getValue();
-			if( value == null )
-				throw new RuntimeException("'"+expr+"' cannot be compared.");
-		}
-	}
+     * @param expr
+     */
+    public static void checkEqualOperand(Expression expr) {
+        if (expr instanceof ConstantExpression) {
+            Object value = ((ConstantExpression)expr).getValue();
+            if (value == null)
+                throw new RuntimeException("'" + expr + "' cannot be compared.");
+        }
+    }
 
-	/**
-	 * 
-	 * @param left
-	 * @param right
-	 */
-	private static void checkEqualOperandCompatability(Expression left, Expression right) {
-		if( left instanceof ConstantExpression && right instanceof ConstantExpression ) {
-			if( left instanceof BooleanExpression && !(right instanceof BooleanExpression) )
-				throw new RuntimeException("'"+left+"' cannot be compared with '"+right+"'");
-		}
-	}
+    /**
+     * 
+     * @param left
+     * @param right
+     */
+    private static void checkEqualOperandCompatability(Expression left, Expression right) {
+        if (left instanceof ConstantExpression && right instanceof ConstantExpression) {
+            if (left instanceof BooleanExpression && !(right instanceof BooleanExpression))
+                throw new RuntimeException("'" + left + "' cannot be compared with '" + right + "'");
+        }
+    }
 
-	
-	
     /**
      * @param left
      * @param right
@@ -334,11 +332,11 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
     }
 
     public Object evaluate(MessageEvaluationContext message) throws JMSException {
-        Comparable lv = (Comparable) left.evaluate(message);
+        Comparable lv = (Comparable)left.evaluate(message);
         if (lv == null) {
             return null;
         }
-        Comparable rv = (Comparable) right.evaluate(message);
+        Comparable rv = (Comparable)right.evaluate(message);
         if (rv == null) {
             return null;
         }
@@ -353,106 +351,81 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
         if (lc != rc) {
             if (lc == Byte.class) {
                 if (rc == Short.class) {
-                    lv = Short.valueOf(((Number) lv).shortValue());
-                }
-                else if (rc == Integer.class) {
-                    lv = Integer.valueOf(((Number) lv).intValue());
-                }
-                else if (rc == Long.class) {
-                    lv = Long.valueOf(((Number) lv).longValue());
-                }
-                else if (rc == Float.class) {
-                    lv = new Float(((Number) lv).floatValue());
-                }
-                else if (rc == Double.class) {
-                    lv = new Double(((Number) lv).doubleValue());
-                }
-                else {
+                    lv = Short.valueOf(((Number)lv).shortValue());
+                } else if (rc == Integer.class) {
+                    lv = Integer.valueOf(((Number)lv).intValue());
+                } else if (rc == Long.class) {
+                    lv = Long.valueOf(((Number)lv).longValue());
+                } else if (rc == Float.class) {
+                    lv = new Float(((Number)lv).floatValue());
+                } else if (rc == Double.class) {
+                    lv = new Double(((Number)lv).doubleValue());
+                } else {
                     return Boolean.FALSE;
                 }
-             } else if (lc == Short.class) {
+            } else if (lc == Short.class) {
                 if (rc == Integer.class) {
-                    lv = Integer.valueOf(((Number) lv).intValue());
-                }
-                else if (rc == Long.class) {
-                    lv = Long.valueOf(((Number) lv).longValue());
-                }
-                else if (rc == Float.class) {
-                    lv = new Float(((Number) lv).floatValue());
-                }
-                else if (rc == Double.class) {
-                    lv = new Double(((Number) lv).doubleValue());
-                }
-                else {
+                    lv = Integer.valueOf(((Number)lv).intValue());
+                } else if (rc == Long.class) {
+                    lv = Long.valueOf(((Number)lv).longValue());
+                } else if (rc == Float.class) {
+                    lv = new Float(((Number)lv).floatValue());
+                } else if (rc == Double.class) {
+                    lv = new Double(((Number)lv).doubleValue());
+                } else {
                     return Boolean.FALSE;
                 }
             } else if (lc == Integer.class) {
                 if (rc == Long.class) {
-                    lv = Long.valueOf(((Number) lv).longValue());
-                }
-                else if (rc == Float.class) {
-                    lv = new Float(((Number) lv).floatValue());
-                }
-                else if (rc == Double.class) {
-                    lv = new Double(((Number) lv).doubleValue());
-                }
-                else {
+                    lv = Long.valueOf(((Number)lv).longValue());
+                } else if (rc == Float.class) {
+                    lv = new Float(((Number)lv).floatValue());
+                } else if (rc == Double.class) {
+                    lv = new Double(((Number)lv).doubleValue());
+                } else {
                     return Boolean.FALSE;
                 }
-            }
-            else if (lc == Long.class) {
+            } else if (lc == Long.class) {
                 if (rc == Integer.class) {
-                    rv = Long.valueOf(((Number) rv).longValue());
-                }
-                else if (rc == Float.class) {
-                    lv = new Float(((Number) lv).floatValue());
-                }
-                else if (rc == Double.class) {
-                    lv = new Double(((Number) lv).doubleValue());
-                }
-                else {
+                    rv = Long.valueOf(((Number)rv).longValue());
+                } else if (rc == Float.class) {
+                    lv = new Float(((Number)lv).floatValue());
+                } else if (rc == Double.class) {
+                    lv = new Double(((Number)lv).doubleValue());
+                } else {
                     return Boolean.FALSE;
                 }
-            }
-            else if (lc == Float.class) {
+            } else if (lc == Float.class) {
                 if (rc == Integer.class) {
-                    rv = new Float(((Number) rv).floatValue());
-                }
-                else if (rc == Long.class) {
-                    rv = new Float(((Number) rv).floatValue());
-                }
-                else if (rc == Double.class) {
-                    lv = new Double(((Number) lv).doubleValue());
-                }
-                else {
+                    rv = new Float(((Number)rv).floatValue());
+                } else if (rc == Long.class) {
+                    rv = new Float(((Number)rv).floatValue());
+                } else if (rc == Double.class) {
+                    lv = new Double(((Number)lv).doubleValue());
+                } else {
                     return Boolean.FALSE;
                 }
-            } 
-            else if (lc == Double.class) {
+            } else if (lc == Double.class) {
                 if (rc == Integer.class) {
-                    rv = new Double(((Number) rv).doubleValue());
-                }
-                else if (rc == Long.class) {
-                    rv = new Double(((Number) rv).doubleValue());
-                }
-                else if (rc == Float.class) {
-                	rv = new Float(((Number) rv).doubleValue());
-                }
-                else {
+                    rv = new Double(((Number)rv).doubleValue());
+                } else if (rc == Long.class) {
+                    rv = new Double(((Number)rv).doubleValue());
+                } else if (rc == Float.class) {
+                    rv = new Float(((Number)rv).doubleValue());
+                } else {
                     return Boolean.FALSE;
                 }
-            } 
-            else 
+            } else
                 return Boolean.FALSE;
         }
         return asBoolean(lv.compareTo(rv)) ? Boolean.TRUE : Boolean.FALSE;
     }
 
     protected abstract boolean asBoolean(int answer);
-    
+
     public boolean matches(MessageEvaluationContext message) throws JMSException {
         Object object = evaluate(message);
-        return object!=null && object==Boolean.TRUE;            
+        return object != null && object == Boolean.TRUE;
     }
 
 }
